Fixed CSS card size on laptop
Cards were too tall and blocking each other. I put a max width and
preserver the aspect ratio now.

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,9 @@ body {
   padding: 1rem;
   text-align: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   max-width: 100vw;
+  overflow: hidden;
 }
 
 .logo {
@@ -56,13 +57,14 @@ body {
 .card {
   aspect-ratio: 14/16;
   background-color: #b3a125;
-  border-radius: 20px;
+  border-radius: 20px;  
+}
 
-  @media (min-width: 1024px) {
+@media (min-width: 1024px) {
+  .card {
     display: flex;
     flex-direction: column;
-    min-width: 10rem;
-    max-width: 15rem;
+    max-width: 11.5rem;
     flex: 1 1 auto;
     box-sizing: border-box;
     margin: 0;
@@ -111,10 +113,10 @@ img {
     display: grid;
     grid-template-rows: repeat(2, minmax(0, 1fr));
     grid-template-columns: repeat(6, minmax(0, 1fr));
-    gap: 1vh 1vw;
+    gap: 1rem;
     padding: 1vh 1vw;
     box-sizing: border-box;
-    overflow: hidden;
+    border: 1px red solid;
   }
 
   @media (max-width: 1023px) {
